Fixed horizonal scrolling issue on mobile nav bar

--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@
     margin: 0;
     padding: 0;
     font-family: 'Poppins', sans-serif;
+    max-width: 100%;
+    overflow-x: hidden;
 }
 
 .header {
